--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <style>
       body {
-        background-color: #ffffff;
+        background: linear-gradient(to top, #ffe8ec 60%, #fff5f5);
         font-family: sans-serif, bold;
+        font-size: small;
       }
 
       .container {
@@ -37,17 +38,38 @@
         gap: 10px;
         overflow-y: auto;
         overflow-x: hidden;
-        max-height: 800px;
+        height: 800px;
         width: 240px;
         position: absolute;
-        left: -240;
+        left: -260;
+        border-top: 1px solid #a2737b;
+        border-bottom: 1px solid #a2737b;
+        padding-top: 12px;
+        padding-bottom: 12px;
+        box-sizing: border-box;
+        align-items: center;
+      }
+
+      .mandala-list::-webkit-scrollbar {
+        background: none;
+        border-style: none;
+        width: 0.4vw;
+        min-width: 6px;
+      }
+
+      .mandala-list::-webkit-scrollbar-thumb {
+        border-radius: 16px;
+        background: #fc68ad3a;
+        border: 1px solid #a2737b;
       }
 
       .mandala-thumbnail {
-        width: 200px;
-        height: 200px;
+        max-width: 200px;
         object-fit: cover;
         cursor: pointer;
+        border-radius: 16px;
+        border: 1px solid #a2737b;
+        box-shadow: 0 4px #8d3d633a;
       }
 
       .mandala-preview {
@@ -59,9 +81,12 @@
       #mainImage {
         width: 800px;
         height: 800px;
+        background-color: #ffffff70;
+        border-radius: 24px;
+        border: 1px solid #a2737b;
       }
 
-      h3 {
+      h2 {
         margin: 0;
         margin-right: 20px;
       }
@@ -71,26 +96,34 @@
         flex: auto;
         align-items: baseline;
       }
+
+      input, button {
+        border-radius: 8px;
+        border: 1px solid #a2737b;
+        background: #fc68ad24;
+        margin-right: 4px;
+        height: 24px;
+        cursor: pointer;
+      }
     </style>
   </head>
   <body>
     <div class="container">
       <div class="nav">
-        <h3>ink.gen</h3>
-        <input type="file" id="imageInput" accept="image/*" onchange="loadImage(event)">
-        <div class="button-container">
-          <div>
-            <label for="numPointsInput">Number of Points: </label>
-            <input type="number" id="numPointsInput" min="3" max="360" value="5">
-            <button onclick="updatePoints()">Update</button>
-          </div>
+        <h2>ink.gen</h2>
+        <div>
+          <button id="uploadButton">Upload Image</button>
+          <input type="file" id="imageInput" style="display: none;">
+          Points:
+          <input type="number" id="numPointsInput" min="3" max="360" value="5">
+          <button onclick="updatePoints()">Update</button>
           <button onclick="generateMandala()">Generate Mandala</button>
           <button onclick="downloadImage()">Download</button>
         </div>
       </div>
       <div style="position: relative">
         <div class="mandala-list" id="mandalaList"></div>
-        <img id="mainImage"/>
+        <img id="mainImage" src="https://i.imgur.com/ArMb4g8.png"/>
       </div>
     </div>
     <canvas id="buffer" width="3300px" height="3300px" style="display: none;"></canvas>
@@ -107,6 +140,17 @@
       var angleIncrement = (360 / numPoints) / 2;
       var mandalaListElement = document.getElementById("mandalaList");
       var mandalaImages = [];
+
+      var uploadButton = document.getElementById('uploadButton');
+      var imageInput = document.getElementById('imageInput');
+
+      uploadButton.addEventListener('click', function() {
+        imageInput.click();
+      });
+
+      imageInput.addEventListener('change', function(event) {
+        loadImage(event);
+      });
 
       var loadImage = function(event) {
         var input = event.target;
@@ -130,7 +174,7 @@
 
           reader.readAsDataURL(input.files[0]);
         }
-      }
+      };
 
       var scaleAndCropImage = function(img, width, height) {
         var aspectRatio = img.width / img.height;
@@ -151,133 +195,143 @@
 
         bufferCtx.clearRect(0, 0, width, height);
         bufferCtx.drawImage(img, dx, dy, scaledWidth, scaledHeight);
+
         var scaledImage = new Image();
         scaledImage.src = bufferElement.toDataURL('image/png', 1);
+
         return scaledImage;
-      }
+      };
 
       var generateMandala = function() {
-  var sliceImage = new Image();
-  var flippedImage = new Image();
-  currentImage = image;
-  var repetitionImage = null;
+        var sliceImage = new Image();
+        var flippedImage = new Image();
+        currentImage = image;
+        var repetitionImage = null;
 
-  var drawSlice = function(degrees) {
-    var angleOffset = Math.floor(Math.random() * 360) + 1;
-    var translationOffset = Math.floor(Math.random() * 800);
-    var bufferWidth = bufferElement.width;
-    var bufferHeight = bufferElement.height;
+        var drawSlice = function(degrees) {
+          var angleOffset = Math.floor(Math.random() * 360) + 1;
+          var translationOffset = Math.floor(Math.random() * 800);
+          var bufferWidth = bufferElement.width;
+          var bufferHeight = bufferElement.height;
 
-    // Rotate around the center
-    bufferCtx.clearRect(0, 0, bufferWidth, bufferHeight);
-    bufferCtx.save();
-    bufferCtx.translate(bufferWidth / 2 + translationOffset, bufferHeight / 2);
-    bufferCtx.rotate((angleOffset + degrees) * Math.PI / 180);
-    bufferCtx.drawImage(currentImage, -currentImage.width / 2, -currentImage.height / 2);
-    bufferCtx.restore();
-
-    bufferCtx.clearRect(0, 0, bufferWidth / 2, bufferHeight);
-    sliceImage.src = bufferElement.toDataURL('image/png', 1);
-
-    sliceImage.onload = function() {
-      // Rotate back
-      bufferCtx.clearRect(0, 0, bufferWidth, bufferHeight);
-      bufferCtx.save();
-      bufferCtx.translate(sliceImage.width / 2, sliceImage.height / 2);
-      bufferCtx.rotate(-degrees * Math.PI / 180);
-      bufferCtx.drawImage(sliceImage, -sliceImage.width / 2, -sliceImage.height / 2);
-      bufferCtx.restore();
-      bufferCtx.clearRect(bufferWidth / 2, 0, bufferWidth / 2, bufferHeight);
-
-      currentImage = sliceImage;
-      flippedImage.src = bufferElement.toDataURL('image/png', 1);
-
-      // Flip horizontally and duplicate
-      flippedImage.onload = function() {
-        bufferCtx.clearRect(0, 0, bufferWidth, bufferHeight);
-        bufferCtx.drawImage(flippedImage, 0, 0);
-        bufferCtx.save();
-        bufferCtx.translate(bufferWidth, 0);
-        bufferCtx.scale(-1, 1);
-        bufferCtx.drawImage(flippedImage, 0, 0, bufferWidth / 2, bufferHeight, 0, 0, bufferWidth / 2, bufferHeight);
-        bufferCtx.restore();
-
-        var bufferedImage = new Image();
-        bufferedImage.src = bufferElement.toDataURL('image/png', 1);
-
-        bufferedImage.onload = function() {
+          // Rotate around the center
           bufferCtx.clearRect(0, 0, bufferWidth, bufferHeight);
-          bufferCtx.drawImage(bufferedImage, 0, 0, bufferWidth, bufferHeight);
-          currentImage = bufferedImage;
-
-          if (!repetitionImage) {
-            repetitionImage = new Image();
-            repetitionImage.src = bufferElement.toDataURL('image/png', 1);
-          }
-
-          bufferCtx.clearRect(0, 0, bufferWidth, bufferHeight);
-          bufferCtx.fillStyle = 'white';
-          bufferCtx.fillRect(0, 0, bufferWidth, bufferHeight);
-
           bufferCtx.save();
-          bufferCtx.translate(bufferWidth / 2, bufferHeight / 2);
-
-          for (var i = 0; i < (360 / angleIncrement); i++) {
-            bufferCtx.rotate((angleIncrement * 2) * Math.PI / 180);
-            bufferCtx.drawImage(repetitionImage, -currentImage.width / 2, -currentImage.height / 2);
-          }
-
+          bufferCtx.translate(bufferWidth / 2 + translationOffset, bufferHeight / 2);
+          bufferCtx.rotate((angleOffset + degrees) * Math.PI / 180);
+          bufferCtx.drawImage(currentImage, -currentImage.width / 2, -currentImage.height / 2);
           bufferCtx.restore();
 
-          var finalImage = new Image();
-          finalImage.src = bufferElement.toDataURL('image/png', 1);
+          bufferCtx.clearRect(0, 0, bufferWidth / 2, bufferHeight);
+          sliceImage.src = bufferElement.toDataURL('image/png', 1);
 
-          finalImage.onload = function() {
-            mainImage.src = finalImage.src;
-            saveMandala(finalImage);
+          sliceImage.onload = function() {
+            // Rotate back
+            bufferCtx.clearRect(0, 0, bufferWidth, bufferHeight);
+            bufferCtx.save();
+            bufferCtx.translate(sliceImage.width / 2, sliceImage.height / 2);
+            bufferCtx.rotate(-degrees * Math.PI / 180);
+            bufferCtx.drawImage(sliceImage, -sliceImage.width / 2, -sliceImage.height / 2);
+            bufferCtx.restore();
+            bufferCtx.clearRect(bufferWidth / 2, 0, bufferWidth / 2, bufferHeight);
+
+            currentImage = sliceImage;
+            flippedImage.src = bufferElement.toDataURL('image/png', 1);
+
+            // Flip horizontally and duplicate
+            flippedImage.onload = function() {
+              bufferCtx.clearRect(0, 0, bufferWidth, bufferHeight);
+              bufferCtx.drawImage(flippedImage, 0, 0);
+              bufferCtx.save();
+              bufferCtx.translate(bufferWidth, 0);
+              bufferCtx.scale(-1, 1);
+              bufferCtx.drawImage(flippedImage, 0, 0, bufferWidth / 2, bufferHeight, 0, 0, bufferWidth / 2, bufferHeight);
+              bufferCtx.restore();
+
+              var bufferedImage = new Image();
+              bufferedImage.src = bufferElement.toDataURL('image/png', 1);
+
+              bufferedImage.onload = function() {
+                bufferCtx.clearRect(0, 0, bufferWidth, bufferHeight);
+                bufferCtx.drawImage(bufferedImage, 0, 0, bufferWidth, bufferHeight);
+                currentImage = bufferedImage;
+
+                if (!repetitionImage) {
+                  repetitionImage = new Image();
+                  repetitionImage.src = bufferElement.toDataURL('image/png', 1);
+                }
+
+                bufferCtx.clearRect(0, 0, bufferWidth, bufferHeight);
+                bufferCtx.fillStyle = 'white';
+                bufferCtx.fillRect(0, 0, bufferWidth, bufferHeight);
+
+                bufferCtx.save();
+                bufferCtx.translate(bufferWidth / 2, bufferHeight / 2);
+
+                for (var i = 0; i < (360 / angleIncrement); i++) {
+                  bufferCtx.rotate((angleIncrement * 2) * Math.PI / 180);
+                  bufferCtx.drawImage(repetitionImage, -currentImage.width / 2, -currentImage.height / 2);
+                }
+
+                bufferCtx.restore();
+
+                var finalImage = new Image();
+                finalImage.src = bufferElement.toDataURL('image/png', 1);
+
+                finalImage.onload = function() {
+                  mainImage.src = finalImage.src;
+                  saveMandala(finalImage);
+                };
+              };
+            };
           };
         };
-      };
-    };
-  };
 
-  drawSlice(angleIncrement);
-};
+        drawSlice(angleIncrement);
+      };
 
       var updatePoints = function() {
         var pointsInput = document.getElementById('numPointsInput');
         var newNumPoints = parseInt(pointsInput.value);
-        if (!isNaN(newNumPoints) && newNumPoints >= 3) {
+
+        if (Number(newNumPoints) && newNumPoints >= 3) {
           numPoints = newNumPoints;
           angleIncrement = (360 / numPoints) / 2;
+
           generateMandala();
         } else {
           pointsInput.value = numPoints;
+
           alert('Please enter a valid number of points (minimum 3).');
         }
-      }
+      };
 
       var saveMandala = function(image) {
         var thumbnailImage = document.createElement('img');
+
         thumbnailImage.src = image.src;
         thumbnailImage.classList.add('mandala-thumbnail');
+
         thumbnailImage.onclick = function() {
           loadMandala(image);
         };
+
         mandalaImages.push(thumbnailImage);
         mandalaListElement.insertBefore(thumbnailImage, mandalaListElement.firstChild);
-      }
+      };
 
       var loadMandala = function(image) {
         mainImage.src = image.src;
-      }
+      };
 
       var downloadImage = function() {
         var link = document.createElement('a');
+
         link.href = mainImage.src;
         link.download = 'mandala.png';
+
         link.click();
-      }
+      };
     </script>
 
   </body>
